[project]
name = "httpx-rate-limiter-transport"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["httpx>=0.28.1", "redis>=6.2.0"]

[dependency-groups]
dev = ["mypy>=1.16.1", "pytest>=8.4.1", "pytest-asyncio>=1.0.0", "ruff>=0.12.2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
